--- a/src/Apex/ApexScoreCardBundle/Resources/views/Default/global.js.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/Default/global.js.twig
@@ -76,9 +76,9 @@ var ApexEventProxy = function() {
 	self.getHoleData = function (data, done, always, fail) {
     	self.proxy.post('{{path('hole_json_get_all')}}', data, done, fail, always);
 	};
-/*	self.getCourseData = function (data, done, always, fail) {
+	self.getCourseData = function (data, done, always, fail) {
     	self.proxy.post('{{path('course_json_get_data')}}', data, done, fail, always);
-	}; */
+	};
 	self.getRoundList = function (data, done, always, fail) {
     	self.proxy.post('{{path('round_json_get_list')}}', data, done, fail, always);
     };
