--- a/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
@@ -19,7 +19,7 @@
 	
 
 
-	<script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
+	<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 	
 <!--	{% if app.user.username == "kuikka" %}
 	
@@ -60,7 +60,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, minimum-scale=0.5, user-scalable=0" />
 	<meta name="apple-mobile-web-app-capable" content="yes" /> 
-	<meta name="apple-mobile-web-app-status-bar-style" content="white" />  
+	<meta name="apple-mobile-web-app-status-bar-style" content="black" />  
 	
 	<meta name="apple-mobile-web-app-title" content="Bogikortti" >
 
@@ -184,7 +184,7 @@
 			<div id="scoreB" class="ui-block-b">
 				<div id="score">
 					<!-- ko if: currentHoleScore() == 0 -->
-						<div class="scoreDisplay">	- </div>
+						<div class="scoreDisplay"> - </div>
 					<!-- /ko -->
 						
 					<!-- ko if: currentHoleScore() > 0 -->
@@ -654,7 +654,7 @@
 
 {% else %}
 
-	<script src="http://code.jquery.com/jquery-2.0.0.js"></script>
+	<script src="http://code.jquery.com/jquery-2.0.3.js"></script>
 	<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
 </head>
 <body>
