--- a/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
@@ -374,34 +374,34 @@
 								<!-- /ko -->
 				
 								<!-- ko if: score() > 0 -->
-									<!-- ko if: scoreToPar === -1 -->
+									<!-- ko if: scoreToPar() === -1 -->
 									<td class="scBirdie"><span class="circle" data-bind="text: score"></span></td>
 									<!-- /ko -->
-									<!-- ko if: scoreToPar < -1 -->
+									<!-- ko if: scoreToPar() < -1 -->
 									<td class="scEagle"><span class="doublecircle"> <span class=" circle" data-bind="text: score"></span></span></td>
 									<!-- /ko -->
-									<!-- ko if: scoreToPar === 1 -->
+									<!-- ko if: scoreToPar() === 1 -->
 										<td class="scBogey"><span class="rectangle" data-bind="text: score"></span></td>
 									<!-- /ko -->
-									<!-- ko if: scoreToPar > 1 -->
+									<!-- ko if: scoreToPar() > 1 -->
 										<td class="scDouble" data-bind="text: score"></td>
 									<!-- /ko -->
-									<!-- ko if: scoreToPar === 0 -->
+									<!-- ko if: scoreToPar() === 0 -->
 										<td class="scScoreCells" data-bind="text: score"></td>
 									<!-- /ko -->
-									<!-- ko if: scoreToPar === 1 -->
+									<!-- ko if: scoreToPar() === 1 -->
 										<td class="scBogey">+<span data-bind="text: scoreToPar"></span></td>
 									<!-- /ko -->
-									<!-- ko if: scoreToPar > 1 -->
+									<!-- ko if: scoreToPar() > 1 -->
 										<td class="scDouble">+<span data-bind="text: scoreToPar"></span></td>
 									<!-- /ko -->
-									<!-- ko if: scoreToPar === -1 -->
+									<!-- ko if: scoreToPar() === -1 -->
 										<td class="scBirdie"><span data-bind="text: scoreToPar"></span></td>
 									<!-- /ko -->
-									<!-- ko if: scoreToPar < -1 -->
+									<!-- ko if: scoreToPar() < -1 -->
 										<td class="scEagle"><span data-bind="text: scoreToPar"></span></td>
 									<!-- /ko -->
-									<!-- ko if: scoreToPar === 0 -->
+									<!-- ko if: scoreToPar() === 0 -->
 										<td class="scScoreCells"><span>E</span></td>
 									<!-- /ko -->
 					
