--- a/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
@@ -253,7 +253,7 @@
 	</div>
 
 	<div id="bottom" data-bind="event: { swipeleft: nextHole, swiperight: previousHole }">
-		<div id="holeData">
+		<div id="holeData" style="display: block">
 			<div id="tmp" class="ui-grid-a" data-role="content" data-theme="c">
 				<div class="ui-block-a">
 					<span id="course" data-bind="text: courseName"></span><br>
@@ -285,28 +285,61 @@
 				</div>
 			</div>
 		</div>
+		<div id="stats" style="display: none; text-align: center">
+			<div data-role="content" data-theme="c" class="ui-grid-b">
+				<div class="ui-block-a">
+					<span>Väyläosumat: </span>
+					<span data-bind="text: fairwayPercentage"></span>
+				</div>
+				<div class="ui-block-b">
+			
+			
+					<form>
+						<fieldset data-role="controlgroup" data-type="horizontal">
+
+							<label><input type="checkbox" name="fir-checkbox" id="fir-checkbox" data-theme="a" value="false" data-bind="checked: hitFairway" />FiR</label>
+					
+							<label><input type="checkbox" name="gir-checkbox" id="gir-checkbox" data-theme="a" value="false" data-bind="checked: hitGreen" />GiR</label>
+						</fieldset>
+					</form>
+				</div>
+				<div class="ui-block-c">
+					<span>Greeniosumat: </span>
+					<span data-bind="text: greenPercentage"></span>
+				</div>
+			</div>
+		</div>
 	</div>
 		
-	<div class="footer" data-role="footer" data-theme="a" data-position="fixed" data-id="score_footer">
-		<div style="float: left">
+	<div data-role="footer" data-theme="a" data-position="fixed" data-id="score_footer" class="footer ui-grid-b">
+			<div class="ui-block-a navbutton">
 			<!-- ko if: currentHole() === 1 -->
-			<a href="#s_page" data-role="button" data-icon="arrow-l"  data-bind="event: { tap: previousHole }" data-iconpos="left" ><span class="holenav">Reikä </span><span class="holenav" data-bind="text: holes().length" style="padding-right: 30px"></span> </a>
+			<a href="#s_page" data-icon="arrow-l" data-role="button" data-inline="true" data-bind="event: { tap: previousHole }" data-iconpos="left"><span class="holenav">Reikä </span><span class="holenav" data-bind="text: holes().length"></span> </a>
 			<!-- /ko -->
 			
 			<!-- ko if: currentHole() !== 1 -->
-			<a href="#s_page" data-role="button" data-icon="arrow-l"  data-bind="event: { tap: previousHole }" data-iconpos="left" data-shadow="false"><span class="holenav">Reikä </span><span class="holenav" data-bind="text: currentHole() - 1" style="padding-right: 30px"></span> </a>
+			<a href="#s_page" data-icon="arrow-l" data-role="button"  data-inline="true" data-bind="event: { tap: previousHole }" data-iconpos="left" data-shadow="false" ><span class="holenav">Reikä </span><span class="holenav" data-bind="text: currentHole() - 1"></span> </a>
 			<!-- /ko -->
-		</div>
+			</div>
+		
+			<div class="ui-block-b" data-role="controlgroup" data-type="horizontal" style="text-align: center">
+				<a data-role="button" data-mini="true" data-inline="true" data-bind="click: showHoledata">Tiedot</a>
+				<a data-role="button" data-mini="true" data-inline="true" data-bind="click: showStats">Tilastot</a>
+			</div>
+			
+<!--		style="float: right">  -->
 
-		<div style="float: right"> 
+			<div class="ui-block-c navbutton" style="float: right">
+			
 			<!-- ko if: currentHole() === holes().length -->
-			<a href="#s_page" data-role="button" data-icon="arrow-r" data-bind="event: { tap: nextHole }"  data-iconpos="right" style="padding-left: 30px"><span class="holenav">Reikä </span><span class="holenav">1</span>  </a>
+			<a href="#s_page" data-icon="arrow-r" data-role="button"  data-inline="true" data-bind="event: { tap: nextHole }"  data-iconpos="right" style="float: right"><span class="holenav">Reikä </span><span class="holenav">1</span>  </a>
 			<!-- /ko -->
 		
 			<!-- ko if: currentHole() !== holes().length -->
-			<a href="#s_page" data-role="button" data-icon="arrow-r" data-bind="event: { tap: nextHole }"  data-iconpos="right" style="padding-left: 30px"><span class="holenav">Reikä </span><span class="holenav" data-bind="text: currentHole() + 1"></span>  </a>
+			<a href="#s_page" data-icon="arrow-r" data-role="button"  data-inline="true" data-bind="event: { tap: nextHole }"  data-iconpos="right" style="float: right"><span class="holenav">Reikä </span><span class="holenav" data-bind="text: currentHole() + 1"></span>  </a>
 			<!-- /ko -->
-		</div>	
+			</div>
+			
 	</div>
 </div>	
 	
@@ -512,10 +545,10 @@
 				
 				<div id="scoreCardButtons">
 					<div data-role="fieldcontain">
-						<fieldset data-role="controlgroup">
-							<label for="finish_round" id="scoreCardFinish">Maalissa</label>
-							<input type="checkbox" id="finish_round" name="finish_round" data-mini="true" data-inline="true" value="true" data-bind="checked: roundFinished, mobileradio: roundFinished" style="display: none" data-theme="b" />
-						</fieldset>
+<!--						<fieldset data-role="controlgroup"> -->
+							<label for="finish_round" id="scoreCardFinish">Maalissa
+							<input type="checkbox" id="finish_round" name="finish_round" data-mini="true" data-inline="true" value="true" data-bind="checked: roundFinished, mobileradio: roundFinished" style="display: none" data-theme="b" /></label>
+<!--						</fieldset> -->
 
 					
 						<div id="scoreCardClose">
