--- a/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
+++ b/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
@@ -287,7 +287,7 @@ body {
 	outline: none;
 	border-radius: 0px !important;
 	border: 0px;
-	background:url('../images/handle.png');
+	background:url('../images/handle_2.png');
 	background-repeat: no-repeat;
 	background-size: 100%;
 	margin-left: -50px !important;
