Redesign jotakuinkin valmis

--- a/src/Apex/ApexScoreCardBundle/Resources/views/Site/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/Site/index.html.twig
@@ -24,55 +24,10 @@
 
 
 <body>
-	<div class="row" style="padding: 10px">
-		<div class="small-3 columns">
-			Diipa
-		</div>
-		<div class="small-3 columns">
-			Daapa
-		</div>
-		<div class="small-3 columns">
-			Doo
-		</div>
-		<div class="small-3 columns">
-			Poo
-		</div>
-	</div>
-	
-	<div id="navbar">
-		<nav class="top-bar">
-			<ul class="title-area">
-				<!-- Title Area -->
-				<li class="name">
-					<h1><a href="#">Top Bar Title </a></h1>
-				</li>
-				<!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-		<!--		<li class="toggle-topbar menu-icon"><a  href="#"><span>Menu</span></a></li> -->
-			</ul>
-	
-			<section class="top-bar-section">
-				<!-- Left Nav Section -->
-				<ul class="left" style="display: inline-block">
-					<li class="divider"></li>
-					<li class="active">
-						<a href="#">Rounds</a>
-					</li>
-					<li class="divider"></li>
-					<li>
-						<a href="#">Stats</a></li>
-					<li class="divider"></li>
-					<li>
-						<a href="#">Courses</a>
-					</li>
-					<li class="divider"></li>
-					<li class="name">
-						<h1><a href="#">App</a></h1>
-					</li>
-					<li class="divider"></li>
-				</ul>
-			</section>
-		</nav>
-	</div>
+
+	<script>
+		window.location.href="http://valta.me/home";
+	</script>
 
 <!--
 	<div class="ui-widget" style="padding: 15px">
