--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -5,22 +5,29 @@
     <div>{{ error|trans({}, 'FOSUserBundle') }}</div>
 {% endif %}
 
+<h2 style="text-align: center; margin: 32px">Kirjaudu Bogikorttiin</h2>
+
+
+
 <form action="{{ path("fos_user_security_check") }}" method="post">
     <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
-    <label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+    <label for="username"><span style="padding-left: 8px; font-weight: 700; color: #eee">Käyttäjänimi</span>
+	</label>
+    <input class="text-input" data-role="none" type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
 
-    <label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
-    <input type="password" id="password" name="_password" required="required" />
 
-    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-    <label for="remember_me">{{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}</label>
+    <label for="password"><span style="padding-left: 8px; font-weight: 700; color: #eee">Salasana</span>	</label>
+	<input class="text-input" data-role="none" type="password" id="password" name="_password" required="required" />
 
-    <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
+
+    <!--<input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+    <label for="remember_me">Muista minut</label> -->
+
+    <input type="submit" id="_submit" name="_submit" value="Kirjaudu sisään" style="min-width: 95%" />
 </form>
 
-	<p><a href="register/">Don't have an account? Register here!</a>
+	<p><a href="register/" style="color: aqua">Ei käyttäjätiliä? Rekisteröidy tästä!</a>
 
 
 {% endblock fos_user_content %}
