--- a/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
@@ -3,23 +3,14 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-	<!-- <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" /> -->
-
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.1/jquery.mobile-1.4.1.min.css" />
-
-
-
-
-<!--    <link href="{{ asset('bundles/apexscore/css/bogikortti.min.css') }}" rel="stylesheet" type="text/css" />    -->
-
   	<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/stylet.css?232123') }}" type="text/css" media="screen" rel="stylesheet" />
 
 	<link rel="apple-touch-icon" sizes="120x120" href="{{ asset('bundles/apexscore/images/touch-icon-iphone-retina.png') }}" />
 
 
 
-{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+
 
     <!--<link href="{{ asset('bundles/apexscore/css/mobiscroll.custom-2.5.2.min.css') }}" rel="stylesheet" type="text/css" /> -->
 
@@ -27,8 +18,8 @@
 	<link href="{{ asset('bundles/apexscore/css/mobiscroll.scroller.ios7.css') }}" rel="stylesheet" type="text/css" />
 	<link href="{{ asset('bundles/apexscore/css/mobiscroll.animation.css') }}" rel="stylesheet" type="text/css" />
 
-	<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/add2home.css') }}">
-	<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/	jquery-ui-1.10.3.custom.min.css') }}">
+	<!-- <link rel="stylesheet" href="{{ asset('bundles/apexscore/css/add2home.css') }}"> -->
+	<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/jquery-ui-1.10.3.custom.min.css') }}">
 
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css", rel="stylesheet">
 
@@ -36,11 +27,6 @@
 
 	<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 
-<!--	{% if app.user.username == "kuikka" %}
-
-		<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/villespecial.css') }}">
-
-	{% endif %}		-->
 
 	<!-- <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script> -->
 	<script src="http://code.jquery.com/mobile/1.4.1/jquery.mobile-1.4.1.min.js"></script>
@@ -51,23 +37,26 @@
 <!-- 		'@ApexScoreBundle/Resources/public/js/mobiscroll.custom-2.5.2.min.js' -->
 
 
-	<script src="{{ asset('bundles/apexscore/js/mobiscroll.core.js') }}"></script>
+<!--	<script src="{{ asset('bundles/apexscore/js/mobiscroll.core.js') }}"></script>
 	<script src="{{ asset('bundles/apexscore/js/mobiscroll.scroller.js') }}"></script>
-	<script src="{{ asset('bundles/apexscore/js/mobiscroll.scroller.ios7.js') }}"></script>
+	<script src="{{ asset('bundles/apexscore/js/mobiscroll.scroller.ios7.js') }}"></script> -->
 
-
+<!-- 		'@ApexScoreBundle/Resources/public/js/add2home.js' -->
 
 	{% javascripts
 		'@ApexScoreBundle/Resources/public/js/date.format.js'
-		'@ApexScoreBundle/Resources/public/js/knockout-3.0.0.js'
+		'@ApexScoreBundle/Resources/public/js/knockout-3.1.0.js'
 		'@ApexScoreBundle/Resources/public/js/moment.min.js'
 		'@ApexScoreBundle/Resources/public/js/lang/fi.js'
 		'@ApexScoreBundle/Resources/public/js/lodash.min.js'
 		'@ApexScoreBundle/Resources/public/js/jquery.transit.custom.js'
 		'@ApexScoreBundle/Resources/public/js/appsi.js'
-		'@ApexScoreBundle/Resources/public/js/add2home.js'
+
 		'@ApexScoreBundle/Resources/public/js/jquery-ui-1.10.3.custom.min.js'
 		'@ApexScoreBundle/Resources/public/js/jquery.ui.touch-punch.min.js'
+		'@ApexScoreBundle/Resources/public/js/mobiscroll.core.js'
+		'@ApexScoreBundle/Resources/public/js/mobiscroll.scroller.js'
+		'@ApexScoreBundle/Resources/public/js/mobiscroll.scroller.ios7.js'
 	%}
 	<script src="{{ asset_url }}"></script>
 
@@ -84,7 +73,7 @@
 
 
 
-	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1.0, minimum-scale=0.5, user-scalable=0" />
+	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1.0, minimum-scale=0.5, user-scalable=0, minimal-ui" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
@@ -96,7 +85,11 @@
 		$.mobile.loader.prototype.options.textVisible = false;*/
 	</script>
 
+
+
 </head>
+
+{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
 
 <body>
 
@@ -455,10 +448,13 @@
 			<div id="prefsWrappi">
 				<div id="mainPrefs">
 					<h5 class="reflect">Tasoitus</h5>
-					<div data-bind="visible: spinnerLoaded() == false" style="background: f7f7f7; min-height: 174px; width: 100%">
-					</div>
-					<div id="prefsPlayerHcp" data-bind="fadeVisible: spinnerLoaded() === true">
-						<input id="i" style="display: none"	data-bind="value: playerExactHcp" data-role="none" />
+
+					<div style="background: #f7f7f7; min-height: 174px; width: 100%">
+						<!--  <div data-bind="visible: spinnerLoaded() == false">
+						</div> -->
+						<div id="prefsPlayerHcp" data-bind="fadeVisible: spinnerLoaded() === true">
+							<input id="i" style="display: none"	data-bind="value: playerExactHcp" data-role="none" />
+						</div>
 					</div>
 
 					<div id="tees">
@@ -1023,10 +1019,6 @@
 
 {% else %}
 
-	<script src="http://code.jquery.com/jquery-2.0.3.js"></script>
-	<!--<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>-->
-	<script src="http://code.jquery.com/mobile/1.4.1/jquery.mobile-1.4.1.min.js"></script>
-</head>
 <body>
 
 	<div data-theme="b" data-role="page" id="login">
