--- a/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
@@ -141,7 +141,7 @@
 		</div>
 
 
-		<div class="ui-grid-b" id="header_courselist" style="display: none; z-index: 1">
+		<div class="ui-grid-b" id="header_courselist" style="display: none; z-index: 1; position: relative">
 			<div class="ui-block-a" data-bind="event: { tap : hideCourseSelect }">
 				<div class="headerButton" style="min-width: 90px; padding-left: 6px">
 					<i class="fa fa-chevron-left chevron" style="font-size: 12px"></i>
