--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -9,6 +9,9 @@
 
 		<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/styles.css') }}" type="text/css" media="screen" rel="stylesheet" />
 		<link rel="apple-touch-icon" sizes="120x120" href="{{ asset('bundles/apexscore/images/touch-icon-iphone-retina.png') }}" />
+		
+		<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css", rel="stylesheet">
+		
 
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1.0, minimum-scale=0.5, user-scalable=0, minimal-ui" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -16,30 +19,42 @@
 	</head>
 
 	<body>
-		<div class="ui-mobile-viewport" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0">
-			<div data-role="content" data-theme="b" style="background: transparent !important">
-				<!-- <div>
-					{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-						{{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
-						<a href="{{ path('fos_user_security_logout') }}">
-							{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
-						</a>
-					{% else %} -->
-					   <!-- <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a> -->
-				<!--	{% endif %}
-				</div> -->
+		<div class="ui-mobile-viewport" style="position: absolute; bottom:0;top:0;left:0;right:0">
+			<div style="height: 44px; width: 100%; margin-top: 6px !important" class="header" data-theme="b" data-role="content">
+				{% block header %}
+			
+				{% endblock header %}
+		
+			</div>
+			<div class="scrollOuter">
+				<div class="scrollMiddle">
+					<div class="scrollInner">
+						<div data-role="content" data-theme="b" style="background: transparent !important">
+							<!-- <div>
+								{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+									{{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
+									<a href="{{ path('fos_user_security_logout') }}">
+										{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+									</a>
+								{% else %} -->
+								   <!-- <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a> -->
+							<!--	{% endif %}
+							</div> -->
 
-				{% for type, messages in app.session.flashbag.all() %}
-					{% for message in messages %}
-						<!-- <div class="flash-{{ type }}">
-							{{ message }}
-						</div> -->
-					{% endfor %}
-				{% endfor %}
+							{% for type, messages in app.session.flashbag.all() %}
+								{% for message in messages %}
+									<!-- <div class="flash-{{ type }}">
+										{{ message }}
+									</div> -->
+								{% endfor %}
+							{% endfor %}
 
-				<div>
-					{% block fos_user_content %}
-					{% endblock fos_user_content %}
+							<div>
+								{% block fos_user_content %}
+								{% endblock fos_user_content %}
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
